2013-10-30 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_x86-cpu.c: Correct not properly tested case of using
	%r12 as index register, what was causing an invalid assertion.
	%r12 is mapped to the "extra" JIT_R3 register, and test cases
	only test "standard" lightning registers.

2013-10-28 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64.c: Minor change to force collecting the maximum
	instruction length in the --enable-devel-get-jit-size build
	mode. The actual generated file did not change because the
	sampling was large enough that it had already collected proper
	information in the previously slightly buggy code (not forcing
	a sync of the instructions that could be combined).

2013-10-27 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_arm.c: Correct build when disassembler is
	disabled.

2013-10-25 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_ia64-cpu.c, lib/jit_ia64-fpu.c: Correct some
	off by one range checks (that were only accepting values
	one less than the maximum allowed) and an invalid test
	condition check that was forcing it to always use
	indirect jumps even when reachable with an immediate
	displacement.

2013-10-24 Paulo Andrade <pcpa@gnu.org>

	* lib/jit_aarch64-sz.c, lib/jit_arm-sz.c, lib/jit_hppa-sz.c,
	lib/jit_ia64-sz.c, lib/jit_mips-sz.c, lib/jit_ppc-sz.c,
	lib/jit_s390x-sz.c, lib/jit_size.c, lib/jit_sparc-sz.c,
	lib/jit_x86-sz.c: New files implementing static tables
	with longest known instructions length generated to match
	a lightning instruction. These tables should make it easier
	to make it very unlikely to ever miscalculate, or by too
	much, the size of a code buffer.

	* lib/jit_size.c: New file that aids to either collect
	jit code size information, or use the information depending
	on build options.

	* size.c: New helper file that parses input for, and create
	an initial jit_$arch-sz.c file, that needs some minor edit
	for arches with multiple configurations.

	* configure.ac, Makefile.am: Add the new, devel mode only